# markdown-editor-chili

./: .gitignore  .gitmodules  DESIGN.md  README.md  SimpleEditor.hs  build.sh  markdown-editor.cabal  shell.nix
editor-client/: Main.hs  SimpleEditor.hs  editor-client.cabal  shell-ghc.nix  shell.nix  style.css
editor-common/: Common.hs  editor-common.cabal  shell.nix
editor-common/Web/Editor/: API.hs
editor-server/: EditorServer.hs  Main.hs  editor-server.cabal  shell.nix
editor-server/data/: index.html
