name:                markdown-editor
version:             0.1.0.0
synopsis:            An WYSIWYG editor for markdown in HTML5
license:             AllRightsReserved
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable markdown-editor
  main-is:             Editor.hs
  other-extensions:    DataKinds, TypeFamilies, DeriveGeneric, TypeOperators, FlexibleInstances, OverloadedStrings, MultiParamTypeClasses, FlexibleContexts, UndecidableInstances, QuasiQuotes, RecordWildCards, ScopedTypeVariables, TemplateHaskell, ParallelListComp
  build-depends:       aeson,
                       base >=4.8 && <4.9,
                       bytestring >=0.10 && <0.11,
                       ghcjs-base,
                       hsx2hs,
                       http-types,
                       isomaniac >= 0.3,
                       lens,
                       servant,
                       servant-isomaniac,
                       text >=1.2 && <1.3,
                       time >=1.5 && <1.6
  default-language:    Haskell2010