name:                editor-client
version:             0.1.0.0
synopsis:            An WYSIWYG editor for markdown in HTML5
license:             AllRightsReserved
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     SimpleEditor
  other-extensions:    DataKinds, TypeFamilies, DeriveGeneric, TypeOperators, FlexibleInstances, OverloadedStrings, MultiParamTypeClasses, FlexibleContexts, UndecidableInstances, QuasiQuotes, RecordWildCards, ScopedTypeVariables, TemplateHaskell, ParallelListComp
  build-depends:       aeson,
                       base >=4.8 && <4.10,
                       bytestring >=0.10 && <0.11,
                       containers,
                       chili,
                       editor-common,
                       ghcjs-base,
                       hsx2hs,
                       http-types,
                       http-api-data,
--                       isomaniac >= 0.2,
                       lens,
                       patches-vector,
--                       servant,
--                       servant-isomaniac,
                       stm,
                       text >=1.2 && <1.3,
                       time >=1.5 && <1.7,
                       userid,
                       vector
  default-language:    Haskell2010

executable editor-client
  main-is:             Main.hs
  buildable:           True
  other-extensions:    DataKinds, TypeFamilies, DeriveGeneric, TypeOperators, FlexibleInstances, OverloadedStrings, MultiParamTypeClasses, FlexibleContexts, UndecidableInstances, QuasiQuotes, RecordWildCards, ScopedTypeVariables, TemplateHaskell, ParallelListComp
  build-depends:       aeson,
                       base >=4.8 && <4.10,
                       bytestring >=0.10 && <0.11,
                       containers,
                       chili,
                       editor-common,
                       ghcjs-base,
                       hsx2hs,
                       http-types,
                       http-api-data,
--                       isomaniac >= 0.2,
                       lens,
                       patches-vector,
--                       servant,
--                       servant-isomaniac,
                       stm,
                       text >=1.2 && <1.3,
                       time >=1.5 && <1.7,
                       userid,
                       vector
  default-language:    Haskell2010
