name:                editor-common
version:             0.1.0.0
synopsis:            A collaborative WYSIWYG editor
homepage:            https://www.github.com/stepcut/markdown-editor
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Common
                       Web.Editor.API
  other-extensions:    DataKinds, DeriveDataTypeable, TypeFamilies, DeriveGeneric, TypeOperators, FlexibleInstances, OverloadedStrings, MultiParamTypeClasses, FlexibleContexts, UndecidableInstances, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, TemplateHaskell, ParallelListComp, ImpredicativeTypes, PolyKinds
  build-depends:       aeson,
                       base >=4.8 && <4.9,
                       containers >=0.5 && <0.6,
                       hsx2hs,
                       http-api-data,
                       lens,
                       patches-vector,
                       servant,
                       text >=1.2 && <1.3,
                       userid,
                       vector

  default-language:    Haskell2010