name:                editor-server
version:             0.1.0.0
synopsis:            Server backend for the wysiwyg editor
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable editor-server
  main-is:             Main.hs
  build-depends:       aeson,
                       acid-state,
                       base >=4.8 && <4.10,
                       bytestring,
                       containers,
                       editor-common,
                       happstack-server,
                       happstack-websockets,
                       hsp,
                       filepath,
                       mtl,
                       lens,
                       patches-vector,
                       safecopy,
                       servant,
                       servant-happstack,
                       stm,
                       text,
                       time,
                       web-routes,
                       websockets
  default-language:    Haskell2010